--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
-	<body></body>
+	<head>
+		<script src="matter.min.js"></script>
+		<script src="matter-test.js"></script>
+	</head>
+	<body onload="load()">
+		<canvas id="gameCanvas"></canvas>
+	</body>
 </html>
